--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -30,7 +30,7 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {},
+      // "typescript": {},
       "node": {
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
