--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -29,6 +29,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
+    "import/no-unresolved": "off",
     "import/prefer-default-export": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [
