--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -30,6 +30,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "prettier/prettier": "error",
+    "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [
       1,
       {
