--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -29,6 +29,7 @@
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
     "camelcase": "off",
+    "import/no-unresolved": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }]
