--- a/back-end/.eslintrc.json
+++ b/back-end/.eslintrc.json
@@ -27,6 +27,7 @@
       }
     ],
     "@typescript-eslint/interface-name-prefix": ["error", { "prefixWithI": "always"}],
+    "@typescript-eslint/interface-name-prefix": "off",
     "no-useless-constructor": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
