--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -30,6 +30,8 @@
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
     "import/no-unresolved": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "camelcase": "off",
     "import/prefer-default-export": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [
