--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -33,6 +33,7 @@
     "@typescript-eslint/no-explicit-any": "off",
     "camelcase": "off",
     "import/prefer-default-export": "off",
+    "import/no-duplicates": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [
       1,
