--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@unform/core": "^2.1.5",
     "@unform/web": "^2.1.5",
     "axios": "^0.21.1",
+    "date-fns": "^2.17.0",
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-day-picker": "^7.4.8",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
