--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -30,6 +30,7 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "prettier/prettier": "error",
+    "react/jsx-one-expression-per-line": "off",
     "import/prefer-default-export": "off",
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
