--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -32,6 +32,7 @@
     "prettier/prettier": "error",
     "react/jsx-one-expression-per-line": "off",
     "import/prefer-default-export": "off",
+    "camelcase": "off",
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [
