--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -29,6 +29,8 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "import/no-unresolved": "off",
+    "import/no-extraneous-dependencies": "off",
     "prettier/prettier": "error",
     "react/jsx-one-expression-per-line": "off",
     "import/prefer-default-export": "off",
