--- a/mobile/package.json
+++ b/mobile/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^25.2.3",
     "@types/react": "^17.0.2",
     "@types/react-native": "^0.63.2",
