--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -35,6 +35,7 @@
     "react/jsx-one-expression-per-line": "off",
     "import/prefer-default-export": "off",
     "camelcase": "off",
+    "import/no-duplicates": "off",
     "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [
